# tibame_personal_project

./: .env  .gitignore  README.md  main.py  pyproject.toml  schema.sql
.claude/: settings.local.json
chroma_db/: chroma.sqlite3
core/: config.py  database.py  template.py
repositories/: chat_history_repository.py  chunk_repository.py  document_repository.py  group_repository.py  user_group_repository.py  user_repository.py  vector_repository.py
routers/: admin.py  auth.py  user.py
scripts/: index_chunks.py  migrate_passwords.py  migration_v2.sql  migration_v3.sql  reindex_vectors.py
services/: auth_service.py  document_service.py  embedding_service.py  file_service.py  rag_service.py
static/: style.css
templates/: index.html
templates/admin/: admin_dashboard.html  admin_delete.html  admin_groups.html  admin_stats.html  admin_upload.html  admin_user_groups.html  admin_users.html
templates/user/: user_dashboard.html  user_history.html
