[project]
name = "personal-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pyodbc>=5.3.0",
    "pypdf>=6.11.0",
    "python-multipart>=0.0.29",
    "uvicorn>=0.47.0",
]
