[project]
name = "personal-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pyodbc>=5.3.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]
